--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ faker = "^26.0.0"
 pytest = "^8.2.2"
 requests = "^2.32.3"
 pytest-cov = "^5.0.0"
+pytest-xdist = "^3.6.1"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+ [tool.pytest.ini_options]
+ addopts="-n 4"
