--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ requests = "^2.32.3"
 pytest-cov = "^5.0.0"
 pytest-xdist = "^3.6.1"
 validation = "^0.8.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
